@@ -1,31 +1,38 @@
-# Maven打包
-mvn -X clean install package -DskipTests
+# 项目
+###### 项目说明
+这是一个使用javafx编写的zookeeper客户端，支持基本的连接管理，分组管理、键操作、操作命令查看、节点搜索、节点过滤、导入导出、数据传输、服务监控、认证管理、sasl认证、终端操作等功能，还支持暗色主题、系统主题跟随等能力
 
-###### Maven打包注意
-检查cmd里面java -version的版本号和项目版本号是否一致，否则可能出现无效的目标版本号17之类的问题
+###### 启动入口
+cn.oyzh.easyzk.EasyZKBootstrap.main
+
+###### 依赖说明
+1. base工程  
+ https://gitee.com/oyzh1994/base
+2. fx-base工程  
+ https://gitee.com/oyzh1994/fx-base
+
+###### 结构说明 
+docker -> zookeeper的docker启动配置文件等
+package -> 打包相关配置
+resource -> 项目相关资源文件
+scripts -> 项目相关脚本文件
+src -> 项目相关代码
+
+# Maven
+###### 打包
+mvn -X clean package -DskipTests
+
+###### 注意
+检查cmd里面java -version的版本号和项目版本号是否一致，否则可能出现无效的目标版本号21之类的问题
 
 # 程序打包
-注意:  
-jre目录是自行裁剪jdk的，把需要的模块裁剪即可，java.scripting,java.desktop,java.naming,java.security.jgss等模块是桌面程序必须的  
-runtime目录是自行建立的，把需要的资源和类库放到此目录即可
+###### windows x64
+打包文件 在项目 -> package -> win_amd64_pack_config.json
+cn.oyzh.easyzk.test.ZKPack.easyzk_win_amd64_pack
 
-###### 定制JRE(windows)
-jlink --verbose --compress=2 --no-header-files --no-man-pages --strip-debug --strip-java-debug-attributes --vm=server --add-modules java.xml,java.sql,java.base,java.naming,java.logging,java.desktop,java.scripting,java.datatransfer,java.security.jgss,jdk.unsupported --output D:\Package\EasyZK\jre
-
-###### 打包镜像(windows，已废弃，交给easypkg来执行)
-jpackage --verbose -t app-image -n EasyZK --vendor oyzh --app-version '1.6.3' --description 'EasyZK Desktop Application.' -i D:\Package\EasyZK\runtime --main-jar easyzk-1.0.jar --icon D:\Package\EasyZK\app.ico --runtime-image D:\Package\EasyZK\jre -d D:\Package\EasyZK
-
-###### 定制JRE(macos)
-./jlink --verbose --compress=2 --no-header-files --no-man-pages --strip-debug --strip-java-debug-attributes --vm=server --add-modules java.xml,java.logging,java.base,java.sql,jdk.unsupported,java.scripting,java.desktop,java.naming,java.security.jgss --output /Users/oyzh/Desktop/Package/EasyZK/1.6.3/macos_amd64_jre
-
-###### 打包镜像(macos)(打包的应用无法正常运行，已废弃，交给easypkg来执行)
-./jpackage --verbose -t app-image -n EasyZK --vendor oyzh --app-version '1.6.3' --description 'EasyZK Desktop Application.' -i /Users/oyzh/Desktop/Package/EasyZK/runtime --main-jar easyzk-1.0.jar --icon /Users/oyzh/Desktop/Package/EasyZK/app.icns --runtime-image /Users/oyzh/Desktop/Package/EasyZK/jre -d /Users/oyzh/Desktop/Package/EasyZK/EasyZK
-
-###### 定制JRE(linux)
-./jlink --verbose --compress=2 --no-header-files --no-man-pages --strip-debug --strip-java-debug-attributes --vm=server --add-modules java.xml,java.logging,java.base,java.sql,jdk.unsupported,java.scripting,java.desktop,java.naming,java.security.jgss --output /home/oyzh/Desktop/Package/EasyZK/1.6.3/linux_amd64_jre
-
-##### 打包镜像(linux，已废弃，交给easypkg来执行)
-jpackage --verbose -t app-image -n EasyZK --vendor oyzh --app-version '1.6.3' --description 'EasyZK Desktop Application.' -i /Users/oyzh/Desktop/Package/EasyZK/runtime --main-jar easyzk-1.0.jar --icon /home/oyzh/Desktop/Package/EasyZK/app.png --runtime-image /Users/oyzh/Desktop/Package/EasyZK/jre -d /home/oyzh/Desktop/Package/EasyZK/EasyZK
+###### macos arm64
+打包文件 在项目 -> package -> macos_arm64_pack_config.json
+cn.oyzh.easyzk.test.ZKPack.easyzk_macos_arm64_pack
 
 ###### docker启动zk(单个)
 docker run -itd -p 2181:2181 zookeeper
@@ -34,7 +41,7 @@ docker run -itd -p 2181:2181 zookeeper
 docker-compose -f .\zk-cluster-compose.yml up -d
 
 ###### mac无法启动解决方案1
-chmod -R +x EasyZK.app
+sudo chmod +x EasyZK.app
 
 ###### mac无法启动解决方案2
 chmod -R 755 /路径/EasyZK.app(可拖入命令行窗口)
@@ -46,17 +53,58 @@ chmod -R 755 /路径/EasyZK.app(可拖入命令行窗口)
    检查是否已经启用了“任何来源”选项。如果没有启用，先点击左下角的小黄锁图标解锁，然后选中“任何来源”‌1。
    如果“任何来源”选项不可用，可以打开终端，输入命令sudo spctl --master-disable，然后按提示输入电脑的登录密码并回车，即可启用“任何来源”选项‌12。
 
-###### jvm参数
---add-opens java.base/java.time.zone=ALL-UNNAMED
--Dprism.verbose=true
--verbose:gc
--XX:+UseZGC
--Xss512K
--Xmx1024m 
--Xms32m 
--XX:NewRatio=2 
--XX:MinHeapFreeRatio=8 
--XX:MaxHeapFreeRatio=20
-
-###### 模块相关
-官方链接 https://docs.oracle.com/en/java/javase/19/docs/api/
+# 程序相关截图
+###### 截图1
+![img1.png](resource/md/img1.png)
+###### 截图2
+![img2.png](resource/md/img2.png)
+###### 截图3
+![img3.png](resource/md/img3.png)
+###### 截图4
+![img4.png](resource/md/img4.png)
+###### 截图5
+![img5.png](resource/md/img5.png)
+###### 截图6
+![img6.png](resource/md/img6.png)
+###### 截图7
+![img7.png](resource/md/img7.png)
+###### 截图8
+![img8.png](resource/md/img8.png)
+###### 截图9
+![img9.png](resource/md/img9.png)
+###### 截图8
+![img10.png](resource/md/img10.png)
+###### 截图11
+![img11.png](resource/md/img11.png)
+###### 截图12
+![img12.png](resource/md/img12.png)
+###### 截图13
+![img13.png](resource/md/img13.png)
+###### 截图14
+![img14.png](resource/md/img14.png)
+###### 截图15
+![img15.png](resource/md/img15.png)
+###### 截图16
+![img16.png](resource/md/img16.png)
+###### 截图17
+![img17.png](resource/md/img17.png)
+###### 截图18
+![img18.png](resource/md/img18.png)
+###### 截图19
+![img19.png](resource/md/img19.png)
+###### 截图20
+![img20.png](resource/md/img20.png)
+###### 截图21
+![img21.png](resource/md/img21.png)
+###### 截图22
+![img22.png](resource/md/img22.png)
+###### 截图23
+![img23.png](resource/md/img23.png)
+###### 截图24
+![img24.png](resource/md/img24.png)
+###### 截图25
+![img25.png](resource/md/img25.png)
+###### 截图26
+![img26.png](resource/md/img26.png)
+###### 截图27
+![img27.png](resource/md/img27.png)
